--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         cursor: pointer;
         font-family: 'JetBrains Mono', monospace;
         transition: 0.2s;
-    }
-    .btn-hud:hover { background: var(--accent); color: #000; }
+}
+        .btn-hud:hover { background: var(--accent); color: #000; }
+        .data-grid { display: grid; grid-template-columns: 1fr; gap: 2px; }
 </style>
-
+</head>
+    
 <body class="dark-mode">
     <div id="poi-alert" style="display:none; position: fixed; top: 60px; right: 20px; background: var(--critical); color: #fff; padding: 10px; z-index: 9999;">⚠️ POINT D'INTÉRÊT ENREGISTRÉ</div>
 
@@ -38,28 +40,22 @@
             </button>
         </div>
 
-        <div class="header-item" style="text-align: right;">
-            <div class="label">SYSTÈME_MÉTRIQUE</div>
-            <div style="display: flex; flex-direction: column; gap: 2px;">
-                <span id="ui-precision-lock" style="color:var(--accent); font-size:0.55rem;">[128-BIT_LOCKED]</span>
-                    STATUS: STANDBY
-                </div>
-            </div>
+ <div class="header-item" style="text-align: right;">
+            <div class="label">SYSTÈME</div>
+            <div id="reality-status-main" style="color:var(--accent); font-size:0.7rem;">STATUS: STANDBY</div>
         </div>
     </header>
 
-    <main>
+    <main class="dashboard-grid">
         <div class="column">
-            <section class="panel" style="flex: 1.5; display: flex; flex-direction: column;" aria-labelledby="head-nav">
-                <h2 id="head-nav"><i class="fas fa-map-marked-alt"></i> Cartographie GNSS</h2>
-                <div id="map-container">
-                    <div id="map"></div>
-                    <div style="position: absolute; top: 10px; left: 10px; z-index: 1000; display: flex; gap: 6px;">
+            <section class="panel">
+                <h2><i class="fas fa-map-marked-alt"></i> CARTOGRAPHIE_GNSS_CORE</h2>
+                <div id="map-container" style="height: 250px; position: relative; background: #000;">
+                    <div id="map" style="height: 100%;"></div>
+                    <div style="position: absolute; top: 10px; left: 10px; z-index: 1000; display: flex; gap: 5px;">
                         <button id="toggle-globe-btn" class="btn-hud">GLOBE</button>
                         <button id="xray-button" class="btn-hud">X-RAY</button>
                     </div>
-                </div>
-            </section>
 
         <section class="panel">
             <h2><i class="fas fa-cog"></i> Système & Contrôles, Synchronisation Éphémérides</h2>
