--- a/index.html
+++ b/index.html
@@ -414,10 +414,8 @@ canvas {
         <div class="data-point"><span>Rayon Ellipsoïde Local</span><span id="earth-radius-local">------ m</span>
         </div>
             
-    <section class="panel">
-    <h2><i class="fas fa-atom"></i> Physique Relativiste</h2>
-    <div class="data-grid">
-                </section>
+</section> </div> <div class="column"> <section class="panel">
+            <h2><i class="fas fa-atom"></i> PHYSIQUE_RELATIVISTE</h2>
                 <h3>Mécanique des Fluides,Champs & Forces et Performance & Flow</h3>
                 <div class="data-point"><span>Pression Dynamique (q)</span><span id="dynamic-pressure">-.-- Pa</span></div>
                 <div class="data-point"><span>Force de Traînée</span><span id="drag-force">-.-- N</span></div>
@@ -511,8 +509,8 @@ canvas {
     </div>
 </section>
 
-<section class="panel" aria-labelledby="astro-heading">
-    <h2 id="astro-heading"><i class="fas fa-globe-americas"></i> Position & Astro-Physique</h2>
+</div> <div class="column"> <section class="panel">
+            <h2><i class="fas fa-globe-americas"></i> POSITION & ASTRO</h2>
     
     <div id="minecraft-clock-container" role="timer" aria-label="Horloge céleste" style="position: relative; height: 100px; background: linear-gradient(to bottom, #001122, #000); overflow: hidden; border-radius: 4px; border: 1px solid #1a1a1a;">
         <div id="celestial-orbit" style="position: absolute; width: 200%; height: 200%; top: 50%; left: -50%; transition: transform 1s linear;">
@@ -606,8 +604,7 @@ canvas {
             <button id="main-init-btn" onclick="startAdventure()" style="width: 100%; background: var(--accent); color: #000; border: none; font-weight: bold; padding: 10px; margin-top: 5px; cursor: pointer; text-transform: uppercase; font-size: 0.75rem; letter-spacing: 1px;">
                 Initialiser_Moteur_V17_PRO
             </button>
-        </section>
-    </div> </main> <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
+        </section> </div> </main> <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
 
