--- a/index.html
+++ b/index.html
@@ -376,7 +376,6 @@ body {
         <h2><i class="fas fa-satellite-dish"></i> GLOBEX-RAY_METRICS</h2>
         <div class="data-point"><span>Précision GPS (Acc)</span><span id="ui-gps-accuracy" class="val-scientifique">-- m</span></div>
         <div class="data-point"><span>Fréquence Vibrations</span><span id="ui-vrt" class="val-scientifique">0.00 Hz</span></div>
-        <div class="data-point"><span>Force G Résultante</span><span id="g-force-resultant" class="val-scientifique">1.000 G</span></div>
     </section>
 
     <section class="panel" aria-labelledby="weather-heading">
@@ -538,6 +537,7 @@ body {
                 <div id="celestial-orbit" style="position: absolute; width: 200%; height: 200%; top: 50%; left: -50%;">
                     <div id="sun-element" style="position: absolute; top: 10%; left: 50%; transform: translateX(-50%); color: #ffcc00; font-size: 1.2rem;"><i class="fas fa-sun"></i></div>
                     <div id="moon-element" style="position: absolute; bottom: 10%; left: 50%; transform: translateX(-50%); color: #dddddd; font-size: 1rem;"><i class="fas fa-moon"></i></div>
+                    <canvas id="mc-clock-canvas" width="100" height="100"></canvas>
                 </div>
                 <div id="astro-phase" style="position: absolute; bottom: 5px; width: 100%; text-align: center; font-size: 0.55rem; color: #aaa;">SYNC_CÉLESTE_OK</div>
             </div>
