--- a/index.html
+++ b/index.html
@@ -160,18 +160,29 @@ body {
                     </div>
                 </div>
             </section>
-
-            <section class="panel" style="flex: 1; background: var(--card); border: 1px solid var(--border); padding: 15px;">
-                <h2 style="font-size: 0.8rem; color: var(--accent); margin-bottom: 10px; text-transform: uppercase;"><i class="fas fa-microchip"></i> FILTRE_UKF_21_ÉTATS</h2>
-                <div id="ukf-viz" style="height: 60px; background: #000; border: 1px solid #222; margin-bottom: 5px;"></div>
-                <div class="data-point" style="font-size: 0.7rem;">
-                    <span>Confiance Matrice P</span>
-                    <span id="kalman-p" style="color: var(--accent);">99.8%</span>
-                </div>
-            </section>
-        </div>
+<div class="column">
+    <section class="panel" style="flex: none; border-left: 2px solid var(--accent);">
+        <h2><i class="fas fa-microchip"></i> FILTRE_UKF_21_ÉTATS</h2>
         
-        <section class="panel">
+        <div id="ukf-viz" style="height: 60px; background: #000; border: 1px solid #222; margin-bottom: 8px; position: relative; overflow: hidden;">
+            <canvas id="ukf-canvas" style="width: 100%; height: 100%;"></canvas>
+        </div>
+
+        <div class="data-point">
+            <span>Confiance Matrice P</span>
+            <span id="kalman-p" style="color: var(--accent); font-family: 'JetBrains Mono';">--%</span>
+        </div>
+        <div class="data-point">
+            <span>Bruit de Process (Q)</span>
+            <span id="ukf-q-noise" style="font-size: 0.6rem;">0.00014</span>
+        </div>
+    </section>
+
+    <section class="panel" style="flex: 1;">
+        <h2><i class="fas fa-database"></i> MÉTRIQUES_SYSTÈME</h2>
+        <div class="data-point"><span>Charge CPU</span><span id="ui-cpu-load">--%</span></div>
+    </section>
+</div>
             <h2><i class="fas fa-cog"></i> Système & Contrôles, Synchronisation Éphémérides</h2>
                 <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime">--</span></div>
                 <div class="data-point"><span>Décalage Heure NTP</span><span id="ntp-offset">--</span></div>
