--- a/index.html
+++ b/index.html
@@ -102,89 +102,46 @@
 </head>
 <body>
 
-    <header style="height: var(--header-h); display: flex; align-items: center; padding: 0 15px; border-bottom: 1px solid var(--border);">
-        <h1 style="font-size: 0.8rem; color: var(--accent);"><i class="fas fa-satellite-dish"></i> OMNISCIENCE_V17_PRO</h1>
-    </header>
-
-    <main class="dashboard-grid">
-        <div class="column">
-             <section class="panel"><h2><i class="fas fa-map"></i> NAV_UNIT</h2><div id="map" style="height:100%;"></div></section>
-        </div>
-        
-        <div class="column">
-             <section class="panel"><h2><i class="fas fa-bolt"></i> DYNAMIQUE</h2><div class="data-point"><span>Vitesse</span><span id="ui-speed-ms">--</span></div></section>
-        </div>
-
-        <div class="column">
-             <section class="panel"><h2><i class="fas fa-eye"></i> SPECTRE</h2><div class="data-point"><span>Flux IR</span><span id="ui-ir-flux">--</span></div></section>
-        </div>
-
-        <div class="column">
-            <section class="panel" style="flex: 0.8; border-left: 2px solid var(--accent);">
-                <h2><i class="fas fa-microchip"></i> FILTRE_UKF_21_ÉTATS</h2>
-                <div id="ukf-viz" style="height: 50px; background: #000; border: 1px solid #222; margin-bottom: 8px; position: relative;">
-                    <canvas id="ukf-canvas" style="width: 100%; height: 100%;"></canvas>
-                </div>
-                <div class="data-point"><span>Confiance Matrice P</span><span id="kalman-p" style="color:var(--accent);">99.8%</span></div>
-                <div class="data-point"><span>Bruit Process (Q)</span><span id="ukf-q-noise">0.00014</span></div>
-            </section>
-
-            <section class="panel" style="flex: 1.2;">
-                <h2><i class="fas fa-terminal"></i> MISSION_LOGS</h2>
-                <div id="anomaly-log">
-                    <div>[V17] Système prêt...</div>
-                </div>
-                <button id="main-init-btn" onclick="startAdventure()" style="margin-top:10px; background:var(--accent); border:none; padding:8px; font-weight:bold; cursor:pointer;">INITIALISER</button>
-            </section>
-        </div>
-    </main>
-
-</body>
-</html>
-    <section class="panel" style="border-left: 2px solid var(--accent); padding: 12px; background: var(--card);">
-        <h2 style="font-size: 0.75rem; color: var(--accent); margin-bottom: 8px;">
-            <i class="fas fa-microchip"></i> FILTRE_UKF_21_ÉTATS
-        </h2>
-        <div id="ukf-viz" style="height: 50px; background: #000; border: 1px solid #222; margin-bottom: 8px; position: relative;">
+<div class="column">
+    <section class="panel" style="flex: 1.2; border-left: 2px solid var(--accent);">
+        <h2><i class="fas fa-microchip"></i> FILTRE_UKF_21_ÉTATS</h2>
+        <div id="ukf-viz" style="height: 60px; background: #000; border: 1px solid #222; margin-bottom: 8px;">
             <canvas id="ukf-canvas" style="width: 100%; height: 100%;"></canvas>
         </div>
-        <div class="data-point">
-            <span>Confiance Matrice P</span>
-            <span id="kalman-p" style="color: var(--accent); font-weight: bold;">--%</span>
-        </div>
-        <div class="data-point">
-            <span>Bruit Process (Q)</span>
-            <span id="ukf-q-noise" style="font-size: 0.6rem; color: #888;">0.00014</span>
-        </div>
+        <div class="data-point"><span>Confiance Matrice P</span><span id="kalman-p" style="color:var(--accent); font-weight:bold;">99.8%</span></div>
+        <div class="data-point"><span>Bruit Process (Q)</span><span id="ukf-q-noise">0.00014</span></div>
     </section>
 
-    <section class="panel" style="padding: 12px; background: var(--card);">
-        <h2 style="font-size: 0.75rem; color: var(--accent); margin-bottom: 8px;">
-            <i class="fas fa-satellite"></i> SYNCHRO_ÉPHÉMÉRIDES
-        </h2>
-        <div id="ephem-status" style="font-size: 0.65rem; color: var(--accent); border: 1px solid #1a1a1f; padding: 6px; background: #000; margin-bottom: 10px;">
+    <section class="panel" style="flex: 1;">
+        <h2><i class="fas fa-satellite"></i> SYNCHRO_ÉPHÉMÉRIDES</h2>
+        <div id="ephem-status" style="font-size: 0.6rem; color: var(--accent); border: 1px solid #1a1a1f; padding: 4px; background: #000; margin-bottom: 8px;">
             <i class="fas fa-check-circle"></i> ALMANAC_GPS: SYNC_OK
         </div>
         <div class="data-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 5px;">
-            <div class="data-point" style="background: rgba(255,255,255,0.03); padding: 5px; flex-direction: column; align-items: flex-start;">
-                <span style="font-size: 0.55rem; color: #888;">Dérive Horloge</span>
-                <span id="ui-clock-drift" style="color: #fff; font-size: 0.75rem;">0.0002 ns</span>
+            <div class="data-point" style="flex-direction: column; align-items: flex-start;">
+                <span style="color: #888; font-size: 0.55rem;">Dérive Horloge</span>
+                <span id="ui-clock-drift" style="color: #fff;">0.0002 ns</span>
             </div>
-            <div class="data-point" style="background: rgba(255,255,255,0.03); padding: 5px; flex-direction: column; align-items: flex-start;">
-                <span style="font-size: 0.55rem; color: #888;">Ratio C (Rel.)</span>
-                <span id="ui-c-ratio" style="color: #fff; font-size: 0.75rem;">0.999...</span>
+            <div class="data-point" style="flex-direction: column; align-items: flex-start;">
+                <span style="color: #888; font-size: 0.55rem;">Ratio C (Rel.)</span>
+                <span id="ui-c-ratio" style="color: #fff;">0.999...</span>
             </div>
         </div>
     </section>
 
-    <section class="panel" style="flex: 1; padding: 12px; background: var(--card);">
-        <h2 style="font-size: 0.75rem; color: var(--accent); margin-bottom: 8px;">
-            <i class="fas fa-database"></i> MÉTRIQUES_SYSTÈME
-        </h2>
-        <div class="data-point"><span>Charge CPU</span><span id="ui-cpu-load">--%</span></div>
-        <div class="data-point"><span>RAM Moteur</span><span id="ui-ram-usage">-- MB</span></div>
+    <section class="panel" style="flex: 1.5;">
+        <h2><i class="fas fa-database"></i> MÉTRIQUES_SYSTÈME</h2>
+        <div id="anomaly-log" style="height: 80px; margin-bottom: 8px;">
+            <div>[V17] Système prêt...</div>
+        </div>
+        <div class="data-point"><span>CPU</span><span id="ui-cpu-load">--%</span></div>
+        <div class="data-point"><span>RAM</span><span id="ui-ram-usage">-- MB</span></div>
+        <button id="main-init-btn" onclick="startAdventure()" style="margin-top:auto; background:var(--accent); border:none; padding:10px; font-weight:bold; cursor:pointer; border-radius:4px;">
+            INITIALISER_V17
+        </button>
     </section>
-</div>
+    </div>
+                <h2><i class="fas fa-cog"></i> Système & Contrôles, Synchronisation Éphémérides</h2>
                 <div class="data-point"><span>Date & Heure (UTC/GMT)</span><span id="utc-datetime">--</span></div>
                 <div class="data-point"><span>Décalage Heure NTP</span><span id="ntp-offset">--</span></div>
                 <div class="data-point"><span>Heure UTC Sync</span><span id="gmt-time-display-1">--:--:--.---</span></div>
