--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>OMNISCIENCE V21 • MASTER HUD</title>
+    <title>OMNISCIENCE V17 GOLD • FULL SPECTRUM METROLOGY</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
 
     <style>
         :root {
@@ -19,115 +22,221 @@
         }
 
         * { box-sizing: border-box; margin: 0; padding: 0; }
+
         body {
-            background: var(--bg); color: var(--text);
-            font-family: 'JetBrains Mono', monospace;
-            height: 100vh; display: flex; flex-direction: column; overflow: hidden;
+            background: var(--bg);
+            color: var(--text);
+            font-family: 'JetBrains Mono', 'Segoe UI', monospace;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
         }
 
         header {
-            height: 50px; background: #000; border-bottom: 2px solid var(--accent);
-            display: grid; grid-template-columns: 1fr 2fr 1fr; align-items: center; padding: 0 15px;
-            z-index: 10;
+            height: 40px;
+            background: #000;
+            border-bottom: 1px solid var(--border);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 15px;
+            font-size: 0.7rem;
+            color: var(--accent);
         }
 
+        /* --- LAYOUT --- */
         main {
             flex: 1;
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 5px; padding: 5px; overflow-y: auto;
+            grid-template-columns: 320px 1fr 320px; /* Fusion des sidebars gauche/droite */
+            overflow: hidden;
         }
 
+        #map { width: 100%; height: 100%; background: #050505; }
+
+        .sidebar {
+            background: #050505;
+            border-right: 1px solid var(--border);
+            border-left: 1px solid var(--border);
+            overflow-y: auto;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        /* --- PANELS & DATA --- */
         .panel {
-            background: var(--card); border: 1px solid var(--border);
-            padding: 8px; border-top: 2px solid var(--accent);
-            display: flex; flex-direction: column; gap: 4px;
+            background: var(--card);
+            border: 1px solid var(--border);
+            padding: 10px;
+            border-radius: 2px;
+            border-top: 2px solid var(--accent);
         }
 
-        .panel h2 { font-size: 0.6rem; color: var(--accent); text-transform: uppercase; border-bottom: 1px solid #333; }
+        .panel h2 {
+            font-size: 0.65rem;
+            color: var(--accent);
+            text-transform: uppercase;
+            margin-bottom: 8px;
+            letter-spacing: 1px;
+            background: rgba(0,255,136,0.05);
+            padding: 2px 5px;
+        }
 
         .data-point {
-            display: flex; justify-content: space-between; font-size: 0.65rem;
+            display: flex;
+            justify-content: space-between;
+            font-size: 0.75rem;
+            margin-bottom: 4px;
         }
-        .data-point span:first-child { color: #777; }
+
+        .data-point span:first-child { color: #666; font-size: 0.6rem; }
         .data-point span:last-child { color: #fff; font-weight: bold; }
-        .unit { color: var(--accent); font-size: 0.5rem; margin-left: 2px; }
 
-        #anomaly-log { height: 60px; font-size: 0.55rem; color: var(--accent); overflow-y: auto; background: #000; border: 1px solid #222; }
-        
-        button#main-init-btn {
-            cursor: pointer; background: var(--accent); color: #000; border: none;
-            font-weight: bold; padding: 10px; font-size: 0.7rem; border-radius: 2px;
-            transition: all 0.3s;
+        /* --- FOOTER GRID (8 BLOCS) --- */
+        footer {
+            height: 200px;
+            background: #000;
+            border-top: 1px solid var(--accent);
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 4px;
+            padding: 4px;
         }
 
-        footer {
-            height: 30px; background: #000; border-top: 1px solid #333;
-            display: flex; justify-content: space-between; align-items: center; padding: 0 10px; font-size: 0.6rem;
+        #anomaly-log {
+            font-size: 0.6rem;
+            color: var(--accent);
+            overflow-y: auto;
+            height: 60px;
+            background: #000;
+            padding: 5px;
+            border: 1px solid #111;
+        }
+
+        .btn-init {
+            width: 100%;
+            background: var(--accent);
+            color: #000;
+            border: none;
+            padding: 10px;
+            font-weight: bold;
+            cursor: pointer;
+            font-size: 0.7rem;
+            margin-top: 5px;
+        }
+
+        @media (max-width: 1200px) {
+            main { grid-template-columns: 1fr; }
+            .sidebar { display: none; }
+            footer { grid-template-columns: repeat(2, 1fr); height: auto; overflow-y: auto;}
         }
     </style>
 </head>
 <body>
 
 <header>
-    <div id="statut-meteo">SCANNING...</div>
-    <div style="text-align: center;">OMNISCIENCE V21 • <span id="reality-status">NOMINAL</span></div>
-    <div style="text-align: right;">SNR: <span id="ui-snr-db">--</span> dB</div>
+    <div>STATUS: <span id="reality-status">NOMINAL</span></div>
+    <div>NTP_OFFSET: <span id="ntp-offset">--</span>ms</div>
+    <div id="digital-clock">00:00:00</div>
 </header>
 
 <main>
-    <div class="panel">
-        <h2>GÉODÉSIE (WGS84)</h2>
-        <div class="data-point"><span>Latitude</span><span id="lat-ukf">--</span></div>
-        <div class="data-point"><span>Longitude</span><span id="lon-ukf">--</span></div>
-        <div class="data-point"><span>Altitude</span><span id="alt-display">--</span></div>
-        <div class="data-point"><span>Précision GPS</span><span id="ui-gps-accuracy">--</span></div>
-        <div class="data-point"><span>Gravité Locale</span><span id="local-gravity">--</span></div>
-        <div class="data-point"><span>Heading</span><span id="heading-display">--</span></div>
-    </div>
+    <aside class="sidebar">
+        <div class="panel">
+            <h2>NAVIGATION_INERTIE</h2>
+            <div class="data-point"><span>Confiance Matrice P</span><span id="matrix-p-conf">--%</span></div>
+            <div class="data-point"><span>Filtre Status</span><span id="kalman-status">READY</span></div>
+            <div class="data-point"><span>UKF Reactivity</span><span id="ukf-reactivity">AUTO</span></div>
+            <div class="data-point"><span>Pitch / Roll</span><span><span id="pitch">0</span>°/<span id="roll">0</span>°</span></div>
+            <div class="data-point"><span>Acc. Filtrée</span><span id="f-acc-xyz">0|0|0</span></div>
+        </div>
 
-    <div class="panel">
-        <h2>MOUVEMENT_PRO</h2>
-        <div class="data-point"><span>Vitesse Stab</span><span id="speed-stable-ms">--</span></div>
-        <div class="data-point"><span>Vitesse (km/h)</span><span id="speed-stable-kmh">--</span></div>
-        <div class="data-point"><span>Mach Number</span><span id="mach-number">--</span></div>
-        <div class="data-point"><span>Accel (X|Y|Z)</span><span id="f-acc-xyz">--</span></div>
-        <div class="data-point"><span>Pitch / Roll</span><span><span id="pitch">--</span> / <span id="roll">--</span></span></div>
-        <div class="data-point"><span>Distance (BigN)</span><span id="dist-3d">--</span></div>
-    </div>
+        <div class="panel">
+            <h2>SYSTÈME_CRITIQUE</h2>
+            <div class="data-point"><span>CPU Temp</span><span id="cpu-temp">--</span></div>
+            <div class="data-point"><span>Batterie</span><span id="battery-level">--%</span></div>
+            <div class="data-point"><span>WiFi Latency</span><span id="wifi-latency">--ms</span></div>
+            <div class="data-point"><span>Planck C.</span><span>6.626e-34</span></div>
+            <button class="btn-init" id="main-init-btn" onclick="startAdventure()">INITIALISER_V17_GOLD</button>
+        </div>
+    </aside>
 
-    <div class="panel">
-        <h2>AÉRODYNAMIQUE</h2>
-        <div class="data-point"><span>Temp. Air</span><span id="ui-temp">--</span></div>
-        <div class="data-point"><span>Densité (ρ)</span><span id="air-density">--</span></div>
-        <div class="data-point"><span>Pression Dyn</span><span id="dynamic-pressure">--</span></div>
-        <div class="data-point"><span>Reynolds (Re)</span><span id="reynolds-number">--</span></div>
-        <div class="data-point"><span>Vitesse Son</span><span id="vitesse-son-cor">--</span></div>
-        <button id="main-init-btn" onclick="startAdventure()">INITIALISER_MOTEUR_V21</button>
-    </div>
+    <div id="map"></div>
 
-    <div class="panel">
-        <h2>RELATIVITÉ_LORENTZ</h2>
-        <div class="data-point"><span>Facteur γ</span><span id="ui-gamma">--</span></div>
-        <div class="data-point"><span>Dilatation T</span><span id="time-dilation">--</span></div>
-        <div class="data-point"><span>Jour Julien</span><span id="ast-jd">--</span></div>
-        <div id="anomaly-log">[SYSTEM] READY TO INITIALIZE...</div>
-    </div>
+    <aside class="sidebar">
+        <div class="panel">
+            <h2>CINÉMATIQUE_PRO</h2>
+            <div class="data-point"><span>V-COSMIQUE</span><span id="v-cosmic">-- km/h</span></div>
+            <div class="data-point"><span>Stable (m/s)</span><span id="speed-stable-ms">0.000</span></div>
+            <div class="data-point"><span>V-Son Corr.</span><span id="vitesse-son-cor">--</span></div>
+            <div class="data-point"><span>Mach Number</span><span id="mach-number">--</span></div>
+        </div>
+
+        <div class="panel">
+            <h2>RELATIVITÉ_GÉNÉRALE</h2>
+            <div class="data-point"><span>Lorentz (γ)</span><span id="ui-gamma">1.0000000000</span></div>
+            <div class="data-point"><span>Dilat. Temps</span><span id="time-dilation">0.0 ns/s</span></div>
+            <div class="data-point"><span>Schwarzschild</span><span id="schwarzschild">-- m</span></div>
+            <div class="data-point"><span>E Relativiste</span><span id="relativistic-energy">-- J</span></div>
+        </div>
+    </aside>
 </main>
 
 <footer>
-    <div>LATENCY: <span id="ui-clock-drift">0.000</span>ms</div>
-    <div>ENGINE: OMNISCIENCE_PHYSICS_V200</div>
-    <div id="utc-datetime">--:--:--</div>
+    <div class="panel">
+        <h2>POSITIONNEMENT_3D</h2>
+        <div class="data-point"><span>LAT_UKF</span><span id="lat-ukf">--</span></div>
+        <div class="data-point"><span>LON_UKF</span><span id="lon-ukf">--</span></div>
+        <div class="data-point"><span>Alt Corrigée</span><span id="alt-display">--</span></div>
+        <div class="data-point"><span>Dist. Cumulée</span><span id="dist-3d">--</span></div>
+    </div>
+
+    <div class="panel">
+        <h2>MÉCANIQUE_FORCES</h2>
+        <div class="data-point"><span>Pression Dyn.</span><span id="dynamic-pressure">-- Pa</span></div>
+        <div class="data-point"><span>Reynolds (Re)</span><span id="reynolds-number">--</span></div>
+        <div class="data-point"><span>Coriolis</span><span id="coriolis">-- N</span></div>
+    </div>
+
+    <div class="panel">
+        <h2>BIO_&_SVT</h2>
+        <div class="data-point"><span>Smoothness</span><span id="bio-smoothness">--</span></div>
+        <div class="data-point"><span>Cal/Kcal</span><span id="calories">--</span></div>
+        <div class="data-point"><span>SNR Global</span><span id="ui-snr-db">--</span></div>
+    </div>
+
+    <div class="panel">
+        <h2>ASTRO_WATCH</h2>
+        <div class="data-point"><span>Jour Julien</span><span id="ast-jd">--</span></div>
+        <div class="data-point"><span>Sidéral (TSLV)</span><span id="tslv">--</span></div>
+        <div class="data-point"><span>Phase Lunaire</span><span id="moon-phase">--</span></div>
+    </div>
+
+    <div class="panel">
+        <h2>POLLUANTS_ATM</h2>
+        <div class="data-point"><span>PM2.5 / PM10</span><span id="pm25-val">--</span></div>
+        <div class="data-point"><span>Index UV</span><span id="ui-uv-index">--</span></div>
+        <div class="data-point"><span>Temp Rosée</span><span id="dew-point">--</span></div>
+    </div>
+
+    <div class="panel">
+        <h2>ESPACE_TEMPS_C</h2>
+        <div class="data-point"><span>Dist. Lum (s)</span><span id="distance-light-s">--</span></div>
+        <div class="data-point"><span>Delta T (ΔT)</span><span id="ast-deltat">--</span></div>
+        <div class="data-point"><span>Azimuth Solaire</span><span id="sun-azimuth">--</span></div>
+    </div>
+
+    <div class="panel" style="grid-column: span 2;">
+        <h2>MISSION_LOGS</h2>
+        <div id="anomaly-log">ENGINE_READY... SYSTEM_WAITING_INIT</div>
+    </div>
 </footer>
 
-<div style="display:none;">
-    <span id="ui-vrt"></span><span id="ui-sampling-rate"></span>
-    <span id="ephem-status"></span>
-</div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.158.0/three.min.js"></script>
 <script src="gnss-dashboard-full.js"></script>
 
 </body>
